<resources>
    <string name="app_name">Tabiin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_5_30">Восполнение индивидуальных фардов (араб. فرض العين).</string>
    <string name="title_home">فرض</string>
    <string name="title_dashboard">الذكر</string>
    <string name="title_notifications">كتاب</string>
    <string name="useful">مفيدة</string>
    <string name="settings">Настройки</string>
    <string name="about_app">حول التطبيق</string>
    <string name="sura_47_ayat_19">فَاعْلَمْ أَنَّهُ لَا إِلَهَ إِلَّا اللَّهُ وَاسْتَغْفِرْ لِذَنبِكَ وَلِلْمُؤْمِنِينَ وَالْمُؤْمِنَاتِ وَاللَّهُ يَعْلَمُ مُتَقَلَّبَكُمْ وَمَثْوَاكُمْ</string>
    <string name="translate_sura_47_ayat_19">Знай же, что нет божества, кроме Аллаха, и проси прощения за свой грех и за верующих мужчин и верующих женщин. Аллах знает о ваших передвижениях и вашей обители.</string>
    <string name="Counter_Settings">Общие настройки</string>
    <string name="version">Версия: 1.0.0.0</string>
    <string name="ibragim_url" translatable="false">https://github.com/IbremMiner837</string>
    <string name="rafail_url" translatable="false">https://github.com/Raf0707</string>
    <string name="mail_raf" translatable="false">raf_android-dev@mail.ru</string>
    <string name="mail_ibrem" translatable="false">ibremminer837.dev@gmail.com</string>
    <string name="mail_danila" translatable="false">rswayfarersx@gmail.com</string>
    <string name="source_code">Исходный код</string>
    <string name="source_code_url" translatable="false">https://github.com/Raf0707/Tabiin_Muslim_Planer</string>
    <string name="from_tabiin_rtx">from Tabiin-RTX</string>
    <string name="tabiin_rtx" translatable="false">https://vk.com/club213851453</string>
    <string name="Raf_title">Рафаил Кикматулин</string>
    <string name="Ibrahim_title">Ибрагим Мальцагов</string>
    <string name="Danila_title">Данила Воробьев</string>
    <string name="raf_android_dev_mail_ru">raf_android-dev@mail.ru</string>
    <string name="ibremminer837_dev_gmail_com">ibremminer837.dev@gmail.com</string>
    <string name="rswayfarersx_gmail_com">rswayfarersx@gmail.com</string>
    <string name="danila_url">https://github.com/DanilaDevx21x</string>
    <string name="version_copied">version copied</string>
    <string name="getContext">getContext()</string>
    <string name="Tabiin_str_Version">\"Tabiin: \</string>
    <string name="str_dv">\: \</string>
    <string name="val_str_sk_right">\ ( \</string>
    <string name="val_str_sk_left">\) \</string>
    <string name="link_to_source_copied">link to source copied</string>
    <string name="raf_git_copylink">link to Rafail Kikmatulin\'s GitHub profile copied</string>
    <string name="ibrem_git_copylink">link to Ibragim Magaltsov\'s GitHub profile copied</string>
    <string name="danila_git_coyplink">link to Danila Vorobyov\'s GitHub profile copied</string>
    <string name="my_email_copylink">Rafail Kikmatulin\'s email copied</string>
    <string name="vk_tabiin_coyplink">VK-Group\'s Tabiin link copied</string>
    <string name="mailto">mailto:</string>
    <string name="text_plain">text/plain</string>
    <string name="email_client">Send email using...</string>
    <string name="no_email_client">No email clients installed.</string>
    <string name="semicolon">\; \</string>
    <string name="Gradle_build">\Gradle build finished in \</string>
    <string name="Apply_changes">Changes Apply Sucscessfully!</string>
    <string name="Debug_finish">\Android App Tabiin finished  Debug in \</string>
    <string name="Milly_sec">\ ms\</string>
    <string name="CompleteTsel">Цель достигнута! Да вознаградит вас Аллах!</string>
</resources>