<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>

        <item
            android:id="@+id/fard_general"
            android:icon="@drawable/ic_baseline_history_toggle_off_24"
            android:title="@string/title_home" />

        <item
            android:id="@+id/zickr_general"
            android:icon="@drawable/ic_baseline_pan_tool_alt_24"
            android:title="@string/title_dashboard" />

        <item
            android:id="@+id/kitab_general"
            android:icon="@drawable/ic_baseline_auto_stories_24"
            android:title="@string/title_notifications" />

        <item
            android:id="@+id/news_general"
            android:icon="@drawable/ic_baseline_newspaper_24"
            android:title="@string/useful" />
    </group>


</menu>